# MRS_EKF_MatLab

./: .gitignore  EKF.mlx  EKF_loc.m  README.md  sampleOdometry.m  sample_test.m
Lessons/1_Basics/: 2_RunSimulation.mlx  3_OccupancyGrid.mlx  4_Odometry.mlx  b_1_kinematics.mlx  b_2_RunSimulation.mlx  b_3_OccupancyMap.mlx
Lessons/2_Sensors/: 1_Odometry.mlx  2_NoiseOdometry.mlx  3_Lidar.mlx  4_LidarObstacleAvoidance.mlx  4_ObjectDetector.mlx  5_ObjectDetector.mlx  s_1_Odometry.mlx  s_2_NoiseOdometry.mlx  s_3_Lidar.mlx  s_4_LidarObstacleAvoidance.mlx  s_5_ObjectDetector.mlx
Lessons/3_PathPlanning/: PathPlanning.mlx  PathTracking.mlx  p_1_PathPlanning.mlx  p_1_PathTracking.mlx
Lessons/4_Localization/: EKF.mlx  KalmanFilter.mlx  L_0_ SummaryLessons123.mlx  L_0_ResumeLessons123.mlx  L_1_EKF_Introduction.mlx  L_2_EKF_Introduction.mlx  L_2_EKF_Prediction.mlx  L_3_EKF_Actualization.mlx  L_4_EKF_Implementation.mlx  Prediction.mlx  ResumeLessons123.mlx  Update.mlx
Lessons/4_SummaryOfPreviousLessons/: L_1_ Summary.mlx
Lessons/5_Localization/: L_1_EKF_Introduction.mlx  L_2_EKF_Prediction.mlx  L_3_EKF_Update.mlx  L_4_EKF_Implementation.mlx
Lessons/5_ROSLocalization/: R_1_EKF_ROSBAG.m  R_1_EKF_ROSBAG.mlx
Lessons/6_ROSLocalization/: R_1_EKF_ROS.mlx  R_1_EKF_ROS_code.m  R_2_EKF_ROSBAG_PRACTICE.mlx  R_2_EKF_ROSBAG_code.m
catkin_ws/: .gitignore
catkin_ws/src/config_files/manipulation/: la_predefined.yaml  ra_predefined.yaml
catkin_ws/src/config_files/maps/: appartment.pgm
catkin_ws/src/config_files/ros_control/: justina_controllers.yaml
catkin_ws/src/config_files/rviz/: justina.rviz
catkin_ws/src/custom_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/custom_msgs/msg/: Landmark.msg
catkin_ws/src/ekf_localization/ekf_tf/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/mobile_base_simul/: CMakeLists.txt  package.xml
catkin_ws/src/justina_gui/: CMakeLists.txt
catkin_ws/src/justina_gui/resources/: resource.qrc
catkin_ws/src/justina_gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  QtRosNode.cpp  QtRosNode.h  justina_gui_node.cpp
catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/custom_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/custom_msgs/include/custom_msgs/: visibility_control.h
catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/custom_msgs/m/+ros/+internal/+ros/+custommessages/+custom_msgs/: landmarks.m
catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/custom_msgs/m/+ros/+msggen/+custom_msgs/: Landmarks.m
catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/custom_msgs/src/: custom_msgs_Landmark_message.cpp  custom_msgs_Landmarks_message.cpp
catkin_ws/src/navigation/map_sparser/: CMakeLists.txt  package.xml
catkin_ws/src/surge_et_ambula/: CMakeLists.txt  package.xml
catkin_ws/src/surge_et_ambula/launch/: justina.launch  navigation.launch
maps/: office.txt.txt  world1.txt
share/: commands.txt  read_tf.m  spawn_marks.py
share/gazebo_models/markers/mark0001/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0002/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0003/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0004/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0005/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0006/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0007/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0008/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0009/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0010/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0011/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0012/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0013/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0014/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0015/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0016/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
share/gazebo_models/markers/mark0017/: model-1_4.sdf  model-1_5.sdf  model.sdf  (+1 more)
util/: EKF_ROS.m  computeOdometry.m  controllerPP.m  ekf_differential.m  generateAugmentedMap.m  generateMap.m  getPathRRT.m  initGoalPosebyClick.m  normalizeAngle.m  objectsByClick.m  objectsByCoordinates.asv  objectsByCoordinates.m  read_april_tags_node.m  sampleOdometry.m  sample_test.m  simulTime.m  testTF.m
(+223 files in other folders)
